[gd_scene load_steps=3 format=3 uid="uid://bxc4k8m2f5nwj"]

[ext_resource type="Script" path="res://scenes/levels/AmsterdamLevel.gd" id="1_amsterdam_script"]
[ext_resource type="Theme" uid="uid://dh6pm4r5vxxrj" path="res://assets/themes/game_theme.tres" id="2_theme"]

[node name="AmsterdamLevel" type="Node2D"]
script = ExtResource("1_amsterdam_script")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(200, 400)

[node name="NPCs" type="Node2D" parent="."]

[node name="JennyNPC" type="CharacterBody2D" parent="NPCs"]
position = Vector2(500, 400)

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2_theme")

[node name="TutorialLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -100.0
offset_right = 400.0
offset_bottom = -50.0
theme = ExtResource("2_theme")
theme_override_font_sizes/font_size = 16
text = "Use arrow keys or WASD to walk to Jenny"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Environment" type="Node2D" parent="."]

[node name="CanalWater" type="Area2D" parent="Environment"]
position = Vector2(400, 500)

[node name="CanalCollision" type="CollisionShape2D" parent="Environment/CanalWater"]

[node name="Bridge" type="StaticBody2D" parent="Environment"]
position = Vector2(400, 480)

[node name="BridgeCollision" type="CollisionShape2D" parent="Environment/Bridge"]

[node name="ExplorationItems" type="Node2D" parent="Environment"]

[node name="Windmill" type="StaticBody2D" parent="Environment/ExplorationItems"]
position = Vector2(100, 300)

[node name="WindmillSprite" type="Sprite2D" parent="Environment/ExplorationItems/Windmill"]
scale = Vector2(2, 2)

[node name="WindmillCollision" type="CollisionShape2D" parent="Environment/ExplorationItems/Windmill"]

[node name="InteractArea" type="Area2D" parent="Environment/ExplorationItems/Windmill"]

[node name="InteractCollision" type="CollisionShape2D" parent="Environment/ExplorationItems/Windmill/InteractArea"]

[node name="TulipGarden" type="StaticBody2D" parent="Environment/ExplorationItems"]
position = Vector2(650, 420)

[node name="TulipSprite" type="Sprite2D" parent="Environment/ExplorationItems/TulipGarden"]
scale = Vector2(1.5, 1.5)

[node name="TulipCollision" type="CollisionShape2D" parent="Environment/ExplorationItems/TulipGarden"]

[node name="InteractArea" type="Area2D" parent="Environment/ExplorationItems/TulipGarden"]

[node name="InteractCollision" type="CollisionShape2D" parent="Environment/ExplorationItems/TulipGarden/InteractArea"]

[node name="CanalBoat" type="StaticBody2D" parent="Environment/ExplorationItems"]
position = Vector2(300, 520)

[node name="BoatSprite" type="Sprite2D" parent="Environment/ExplorationItems/CanalBoat"]
scale = Vector2(1.2, 1.2)

[node name="BoatCollision" type="CollisionShape2D" parent="Environment/ExplorationItems/CanalBoat"]

[node name="InteractArea" type="Area2D" parent="Environment/ExplorationItems/CanalBoat"]

[node name="InteractCollision" type="CollisionShape2D" parent="Environment/ExplorationItems/CanalBoat/InteractArea"]

[node name="EnvironmentalPuzzles" type="Node2D" parent="Environment"]

[node name="BridgePuzzle" type="Node2D" parent="Environment/EnvironmentalPuzzles"]
position = Vector2(400, 450)

[node name="BridgeSection1" type="StaticBody2D" parent="Environment/EnvironmentalPuzzles/BridgePuzzle"]
position = Vector2(-50, 0)

[node name="BridgeSection2" type="StaticBody2D" parent="Environment/EnvironmentalPuzzles/BridgePuzzle"]
position = Vector2(0, 0)

[node name="BridgeSection3" type="StaticBody2D" parent="Environment/EnvironmentalPuzzles/BridgePuzzle"]
position = Vector2(50, 0)

[node name="LampPostPuzzle" type="Node2D" parent="Environment/EnvironmentalPuzzles"]
position = Vector2(150, 350)

[node name="LampSwitch" type="Area2D" parent="Environment/EnvironmentalPuzzles/LampPostPuzzle"]

[node name="SwitchCollision" type="CollisionShape2D" parent="Environment/EnvironmentalPuzzles/LampPostPuzzle/LampSwitch"]

[node name="CulturalElements" type="Node2D" parent="Environment"]

[node name="AmsterdamHouses" type="Node2D" parent="Environment/CulturalElements"]
z_index = -1

[node name="House1" type="Sprite2D" parent="Environment/CulturalElements/AmsterdamHouses"]
position = Vector2(100, 250)
scale = Vector2(1.5, 1.5)

[node name="House2" type="Sprite2D" parent="Environment/CulturalElements/AmsterdamHouses"]
position = Vector2(240, 230)
scale = Vector2(1.8, 1.8)

[node name="House3" type="Sprite2D" parent="Environment/CulturalElements/AmsterdamHouses"]
position = Vector2(380, 240)
scale = Vector2(1.6, 1.6)

[node name="House4" type="Sprite2D" parent="Environment/CulturalElements/AmsterdamHouses"]
position = Vector2(520, 220)
scale = Vector2(1.7, 1.7)

[node name="House5" type="Sprite2D" parent="Environment/CulturalElements/AmsterdamHouses"]
position = Vector2(660, 250)
scale = Vector2(1.4, 1.4)

[node name="CanalDetails" type="Node2D" parent="Environment/CulturalElements"]

[node name="CanalBridge1" type="Sprite2D" parent="Environment/CulturalElements/CanalDetails"]
position = Vector2(200, 480)

[node name="CanalBridge2" type="Sprite2D" parent="Environment/CulturalElements/CanalDetails"]
position = Vector2(600, 480)

[node name="BikeRack" type="StaticBody2D" parent="Environment/CulturalElements"]
position = Vector2(50, 400)

[node name="BikeSprite" type="Sprite2D" parent="Environment/CulturalElements/BikeRack"]

[node name="BikeCollision" type="CollisionShape2D" parent="Environment/CulturalElements/BikeRack"]

[node name="InteractArea" type="Area2D" parent="Environment/CulturalElements/BikeRack"]

[node name="InteractCollision" type="CollisionShape2D" parent="Environment/CulturalElements/BikeRack/InteractArea"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="SkyLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)

[node name="SkySprite" type="Sprite2D" parent="ParallaxBackground/SkyLayer"]
position = Vector2(400, 200)
scale = Vector2(4, 4)

[node name="CloudLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.3, 0.3)

[node name="Cloud1" type="Sprite2D" parent="ParallaxBackground/CloudLayer"]
position = Vector2(150, 100)
scale = Vector2(1.2, 1.2)

[node name="Cloud2" type="Sprite2D" parent="ParallaxBackground/CloudLayer"]
position = Vector2(500, 80)
scale = Vector2(1.5, 1.5)

[node name="Cloud3" type="Sprite2D" parent="ParallaxBackground/CloudLayer"]
position = Vector2(750, 120)
scale = Vector2(1.1, 1.1)

[node name="BuildingLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.5)

[node name="DistantBuildings" type="Sprite2D" parent="ParallaxBackground/BuildingLayer"]
position = Vector2(400, 150)
scale = Vector2(3, 3)
z_index = -2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
